feat: update models to distinguish SGX and TDX enabled workers